--- a/templates/home.html
+++ b/templates/home.html
@@ -130,7 +130,9 @@
   <template id="noticia_tmpl">
   <section class="col-sm-4 col-md-4 col-lg-4">
     <div class="box post">
-      <a href="#" class="image "><img src="" alt="" /></a>
+      <div class="box-fb-img">
+        <a href="#" class="image "><img src="" alt="" /></a>
+      </div>
       <div class="inner">
         <h3></h3>
         <p></p>
