Adiciona conteudo de equipes.

--- a/templates/content/pt-br/equipe.html
+++ b/templates/content/pt-br/equipe.html
@@ -1,28 +1,151 @@
 <div class="item">
-    <h3>Luiz Antonio Ferreira dos Santos Filho</h3>
-    <h4 class="area"><strong>Lista Vermelha</strong></h4>
-    <img src="{{static_url}}/images/equipe/lista-vermelha/luiz.jpg"/>
-    <p> Especialização em Meio Ambiente pela COPPE/UFRJ (2012), graduado em Ciências Biológicas (Bacharelado) pela Universidade Santa Úrsula - USU (2009). Possui experiência em Coleções Biológicas e Taxonomia Vegetal. No CNCFlora é coordenador substituto do projeto “Avaliação do risco de extinção da flora brasileira”, participando da análise de dados, avaliação de risco, redação de artigos científicos e de documentos técnicos ou de divulgação científica.</p>
-    <p> Especialização em Meio Ambiente pela COPPE/UFRJ (2012), graduado em Ciências Biológicas (Bacharelado) pela Universidade Santa Úrsula - USU (2009). Possui experiência em Coleções Biológicas e Taxonomia Vegetal. No CNCFlora é coordenador substituto do projeto “Avaliação do risco de extinção da flora brasileira”, participando da análise de dados, avaliação de risco, redação de artigos científicos e de documentos técnicos ou de divulgação científica.</p>
+  <h3>Gustavo Martinelli:</h3>
+  <img src="{{static_url}}/images/equipe/Gustavo.jpeg"/>
+  <p> Doutor pela Faculty of Sciences – University of St. Andrews, UK (1994). Atualmente é
+  pesquisador titular do Instituto de Pesquisa Jardim Botânico do Rio de Janeiro e coordenador do Centro
+  Nacional de Conservação da Flora – CNCFlora. Nomeado como Ponto Focal do Brasil junto à Estratégia
+  Global para Conservação de Plantas – GSPC/CDB. Docente do Programa de Pós-Graduação da Escola
+  Nacional de Botânica Tropical – ENBT/JBRJ; Professor Credenciado da Open University, UK; membro do
+  Conselho de Administração da Fundação SOS Mata Atlântica; Chair do Brazilian Plant Red List Authority
+  da IUCN. Tem experiência na área de Botânica, com ênfase em Taxonomia Vegetal, atuando
+  principalmente nos seguintes temas: Bromeliaceae, Conservação, Mata Atlântica, Biodiversidade de
+  Montanhas,Taxonomia, Inventários e coordenação de expedições científicas.</p>
+  </div>
+<div class="item">
+  <h3>Eduardo Dalcin</h3>
+  <img src="{{static_url}}/images/equipe/Eduardo.jpeg"/>
+  <p> Doutor em Informática na Biodiversidade pela University of Southampton,
+  (2005), graduado em Ciências Biológicas pela Universidade Gama Filho (1989). Sua experiência e
+  interesses profissionais estão relacionados com: gestão de informação em biodiversidade, governança de
+  dados em biodiversidade, bancos de dados taxonômicos; e qualidade, análise e visualização de dados
+  sobre biodiversidade. Atualmente ocupa o cargo de coordenador do Núcleo de Computação Científica e
+  Geoprocessamento do Instituto de Pesquisas Jardim Botânico do Rio de Janeiro. Membro do comitê
+  técnico-científico do Sistema de Informação sobre a Biodiversidade Brasileira (SiBBr) do MCTI; e do
+  Grupo Técnico da Flora do Mundo Online, meta da GSPC para 2020. No CNCFlora atua como
+  coordenador substituto e faz parte da equipe dos projetos “Planejamento de ações para a conservação de
+  espécies ameaçadas de extinção” e "Projeto Desenvolvimento de sistemas e análises espaciais”.</p>
+  </div>
+<div class="item">
+  <h3>Andrea Correia</h3>
+  <img src="{{static_url}}/images/equipe/Andrea.jpeg"/>
+  <p>Engenheira Química formada pela Universidade Federal do Rio de Janeiro - UFRJ,
+  possui pós graduação em Engenharia Econômica e Administração Industrial também pela UFRJ e MBA
+  em Finanças pelo IBMEC. Atuou por 16 anos na iniciativa privada, em empresas atuantes nos setores de
+  papel e celulose, petroquímica, energia, óleo e gás, logística e mineração, tendo conduzido atividades nas
+  áreas de planejamento, relações com investidores e comunicação.</p>
+  </div>
+<div class="item">
+  <h3>Bruno Giminiani</h3>
+  <img src="{{static_url}}/images/equipe/Bruno.jpeg"/>
+  <p> Graduado em Análise e Desenvolvimento de Sistemas pela Universidade Estácio de
+  Sá - UNESA. Possui experiência no desenvolvimento de aplicações de portais para a internet e
+  desenvolvimento de sistemas e processos utilizando tecnologias e ferramentas de código livre
+  (opensource). No CNCFlora faz parte da equipe de "Projeto Desenvolvimento de sistemas e análises
+  espaciais”, participando do desenvolvimento de sistemas, informatização, implementação e
+  gerenciamento do banco de dados.</p>
 </div>
 <div class="item">
-    <h3>Luiz Antonio Ferreira dos Santos Filho</h3>
-    <h4 class="area"><strong>Lista Vermelha</strong></h4>
-    <img src="{{static_url}}/images/equipe/lista-vermelha/luiz.jpg"/>
-    <p> Especialização em Meio Ambiente pela COPPE/UFRJ (2012), graduado em Ciências Biológicas (Bacharelado) pela Universidade Santa Úrsula - USU (2009). Possui experiência em Coleções Biológicas e Taxonomia Vegetal. No CNCFlora é coordenador substituto do projeto “Avaliação do risco de extinção da flora brasileira”, participando da análise de dados, avaliação de risco, redação de artigos científicos e de documentos técnicos ou de divulgação científica.</p>
-    <p> Especialização em Meio Ambiente pela COPPE/UFRJ (2012), graduado em Ciências Biológicas (Bacharelado) pela Universidade Santa Úrsula - USU (2009). Possui experiência em Coleções Biológicas e Taxonomia Vegetal. No CNCFlora é coordenador substituto do projeto “Avaliação do risco de extinção da flora brasileira”, participando da análise de dados, avaliação de risco, redação de artigos científicos e de documentos técnicos ou de divulgação científica.</p>
+  <h3>Diogo Silva</h3>
+  <img src="{{static_url}}/images/equipe/Diogo.jpeg"/>
+  <p> Graduando em Análise e Desenvolvimento de Sistemas pela Universidade Estácio de Sá
+    (conclusão prevista para 2014). Possui experiência no desenvolvimento de portais e aplicações para
+    internet e servidores, em análise e modelagem de sistemas e processos, utilizando tecnologias e
+    ferramentas de código livre (opensource). No CNCFlora faz parte da equipe de “Projeto Desenvolvimento
+    de sistemas e análises espaciais”, onde é responsável pela criação e desenvolvimento do portal
+    CNCFlora, desenvolvimento de sistemas, informatização, implementação e gerenciamento de dados e
+    infraestrutura de tecnologia.</p>
 </div>
 <div class="item">
-    <h3>Luiz Antonio Ferreira dos Santos Filho</h3>
-    <h4 class="area"><strong>Lista Vermelha</strong></h4>
-    <img src="{{static_url}}/images/equipe/lista-vermelha/luiz.jpg"/>
-    <p> Especialização em Meio Ambiente pela COPPE/UFRJ (2012), graduado em Ciências Biológicas (Bacharelado) pela Universidade Santa Úrsula - USU (2009). Possui experiência em Coleções Biológicas e Taxonomia Vegetal. No CNCFlora é coordenador substituto do projeto “Avaliação do risco de extinção da flora brasileira”, participando da análise de dados, avaliação de risco, redação de artigos científicos e de documentos técnicos ou de divulgação científica.</p>
-    <p> Especialização em Meio Ambiente pela COPPE/UFRJ (2012), graduado em Ciências Biológicas (Bacharelado) pela Universidade Santa Úrsula - USU (2009). Possui experiência em Coleções Biológicas e Taxonomia Vegetal. No CNCFlora é coordenador substituto do projeto “Avaliação do risco de extinção da flora brasileira”, participando da análise de dados, avaliação de risco, redação de artigos científicos e de documentos técnicos ou de divulgação científica.</p>
+  <h3>Leonardo Novaes</h3>
+  <img src="{{static_url}}/images/equipe/Leonardo.jpeg"/>
+  <p> Graduado em Geografia (Bacharelado) pela Pontifícia Universidade Católica do Rio
+    de Janeiro - PUC (2011). Possui experiência na área de sensoriamento remoto e sistemas de
+    informações geográficas (SIG), atuando principalmente nos seguintes temas: estudos ambientais e
+    geotecnologias. No CNCFlora faz parte da equipe “Projeto Desenvolvimento de sistemas e análises
+    espaciais”, participando na análise de dados, redação de artigos científicos e de documentos técnicos ou
+    de divulgação científica e produção cartográfica.</p>
 </div>
 <div class="item">
-    <h3>Luiz Antonio Ferreira dos Santos Filho</h3>
-    <h4 class="area"><strong>Lista Vermelha</strong></h4>
-    <img src="{{static_url}}/images/equipe/lista-vermelha/luiz.jpg"/>
-    <p> Especialização em Meio Ambiente pela COPPE/UFRJ (2012), graduado em Ciências Biológicas (Bacharelado) pela Universidade Santa Úrsula - USU (2009). Possui experiência em Coleções Biológicas e Taxonomia Vegetal. No CNCFlora é coordenador substituto do projeto “Avaliação do risco de extinção da flora brasileira”, participando da análise de dados, avaliação de risco, redação de artigos científicos e de documentos técnicos ou de divulgação científica.</p>
-    <p> Especialização em Meio Ambiente pela COPPE/UFRJ (2012), graduado em Ciências Biológicas (Bacharelado) pela Universidade Santa Úrsula - USU (2009). Possui experiência em Coleções Biológicas e Taxonomia Vegetal. No CNCFlora é coordenador substituto do projeto “Avaliação do risco de extinção da flora brasileira”, participando da análise de dados, avaliação de risco, redação de artigos científicos e de documentos técnicos ou de divulgação científica.</p>
+  <h3>Lucas Moraes</h3>
+  <img src="{{static_url}}/images/equipe/Lucas_moraes.jpeg"/>
+  <p> No CNCFlora, é integrante da equipe do “Projeto Lista Vermelha”, com atuação principal
+    nas análises de avaliação de risco de extinção. Além disso, possui partipação nas etapas de redação e
+    editoração de documentos e no gerenciamento do banco de imagens. Possui graduação em Ciências
+    Biológicas pela Universidade Federal do Rio de Janeiro, na modalidade Genética (2013). Tem experiência
+    nas áreas de evolução molecular, filogenética, filogeografia, fotografia e edição de imagens.</p>
+</div>
+<div class="item">
+  <h3>Lucas Moulton</h3>
+  <img src="{{static_url}}/images/equipe/Lucas.jpeg"/>
+  <p> No CNCFlora, faz parte da equipe do “Projeto Lista Vermelha”, participando da análise
+    de dados, avaliação de risco, redação de artigos científicos e de documentos técnicos ou de divulgação
+    científica; e responsável por traduções em inglês. Graduado em Ciência Ambiental (Bacharelado) pela
+    Universidade de New England (University of New England), Austrália. Possui experiência com a
+    elaboração, execução, redação e apresentação de estudo da resiliência de macrófitas submersas diante
+    de aumento de nutrientes em sistema lêntico e como auxiliar de campo em estudos de fitossociologia da
+    Mata Nebular da Serra dos Orgãos.</p>
+</div>
+<div class="item">
+  <h3>Luiz Antonio Ferreira dos Santos Filho</h3>
+  <img src="{{static_url}}/images/equipe/Luiz.jpeg"/>
+  <p>Graduado em Ciências Biológicas pela Universidade Santa
+    Úrsula (2009). Pós-graduado em Meio Ambiente pela COPPE/UFRJ (2012). Mestrando pela Escola
+    Nacional de Botânica Tropical (ENBT/JBRJ). No Centro Nacional de Conservação da Flora (CNCFlora)
+    atua no Projeto Lista Vermelha, coordenando o fluxo de trabalho da avaliação do risco de extinção da
+    flora, a redação de artigos científicos e de documentos técnicos ou de divulgação científica.</p>
+</div>
+<div class="item">
+  <h3>Raquel Negrão</h3>
+  <img src="{{static_url}}/images/equipe/Raquel.jpeg"/>
+  <p>No CNCFlora faz parte da equipe do “Projeto Lista Vermelha”, participando da análise de
+    dados, avaliação de risco de extinção, redação de artigos científicos, de documentos técnicos e de
+    divulgação científica. É Doutora e Mestre pelo Programa de Ecologia e Recursos Naturais da
+    Universidade Federal de São Carlos e graduada em Ciências Biológicas pela mesma universidade.
+    Desenvolveu e participou de projetos nas áreas de Ecologia Vegetal de Populações e Comunidades,
+    Botânica, Ecologia da Paisagem, Ecologia de Estradas e Educação Ambiental, atuando principalmente
+    nos seguintes temas: estrutura e dinâmica de populações, ecologia de comunidades envolvendo
+    levantamento fitossociológicos, distribuição espacial, estudo de ecótones e efeito de transições artificias,
+    educação ambiental e conservação da biodiversidade. Possui experiência de campo em diferentes áreas
+    de Cerrado, Mata Atlântica e Restinga.</p>
+</div>
+<div class="item">
+  <h3>Ricardo Avancini Fernandes</h3>
+  <h4 class="area"><strong>coordenador de Desenvolvimento de Sistemas e SIG</strong></h4>
+  <img src="{{static_url}}/images/equipe/Ricardo.jpeg"/>
+  <p>Pós-graduando no MBA em Tecnologia da Informação pela Universidade Federal do Rio de Janeiro – UFRJ, graduado
+    em Ciências Biológicas pela mesma universidade. Possui experiência na área de tecnologia da
+    informação e geoprocessamento, atuando principalmente no desenvolvimento e manutenção de banco de
+    dados geográficos e desenvolvimento de sistemas de informação. No CNCFlora coordena a equipe do
+    projeto “Desenvolvimento de sistemas e análises espaciais”, participando do desenvolvimento de
+    sistemas, gerenciamento do banco de dados e elaboração de mapas, além de contribuir com a redação
+    de artigos científicos e de documentos técnicos ou de divulgação científica.</p>
+</div>
+<div class="item">
+  <h3>Tainan Messina</h3>
+  <h4 class="area"><strong>coordenadora do projeto Lista Vermelha</strong></h4>
+  <img src="{{static_url}}/images/equipe/Tainan.jpeg"/>
+  <p>No CNCFlora coordena o projeto
+    Vermelha”. Tem experiência nas áreas de biologia da conservação, conservação de espécies ameaçadas
+    da flora e na elaboração de documentos técnico-científicos e protocolos para conservação da natureza.
+    Também é Mestranda da Escola Nacional de Botânica Tropical – ENBT/JBRJ, graduada em Ciências
+    Biológicas (Licenciatura + Bacharelado) pela Pontifícia Universidade Católica de Campinas – PUC (2005).</p>
+</div>
+<div class="item">
+  <h3>Thiago Serrano de Almeida Penedo</h3>
+  <img src="{{static_url}}/images/equipe/Thiago.jpeg"/>
+  <p>Graduado em Ciências Biológicas (Bacharelado) pela
+    Universidade Federal do Estado do Rio de Janeiro – UNIRIO (2012). Possui experiência nas áreas de
+    Sistemas de Informação Geográfica, Geoprocessamento e Biologia da Conservação. No CNCFlora faz
+    parte do projeto “Desenvolvimento de sistemas e análises espaciais”, participando das análises espaciais
+    relacionadas a conservação da flora, georreferenciamento e geoprocessamento, redação de artigos
+    científicos e de documentos técnicos ou de divulgação científica.</p>
+</div>
+<div class="item">
+  <h3>Julio Perota:</h3>
+  <img src="{{static_url}}/images/equipe/Julio.jpeg"/>
+  <p>Bacharel Marketing pela Pontifícia Universidade Católica de Campinas. Atualmente integra a
+    equipe de gestão administrativa do CNCFlora, e participa de atividades relacionadas ao projeto
+    “Conservação de espécies da flora criticamente em perigo de extinção do Cerrado Brasileiro”. Tem
+    atuação em empresas corporativas com atividades relacionadas à pesquisa de mercado, atendimento e
+    marketing interno.</p>
 </div>
