Insere conteudo na equipe de plano de ação.

--- a/templates/content/pt-br/project/plano-de-acao.html
+++ b/templates/content/pt-br/project/plano-de-acao.html
@@ -93,20 +93,100 @@
 <h3>Equipe</h3>
 <div class="slide-equipe" class="col-sm-12 col-md-12 col-lg-12">
   <div class="item">
-      <img src="{{static_url}}/images/equipe/lista-vermelha/luiz.jpg"/>
-      <p><strong>Luiz Antonio Ferreira dos Santos Filho:</strong> Especialização em Meio Ambiente pela COPPE/UFRJ (2012), graduado em Ciências Biológicas (Bacharelado) pela Universidade Santa Úrsula - USU (2009). Possui experiência em Coleções Biológicas e Taxonomia Vegetal. No CNCFlora é coordenador substituto do projeto “Avaliação do risco de extinção da flora brasileira”, participando da análise de dados, avaliação de risco, redação de artigos científicos e de documentos técnicos ou de divulgação científica.</p>
+      <img src="{{static_url}}/images/equipe/Eline.jpg"/>
+      <p><strong>Eline Martins:</strong>Bióloga, doutora em Botânica pela Escola Nacional de Botânica Tropical -
+        ENBT (2013) e mestre em Conservação da Natureza pela Universidade Federal Rural do Rio de
+        Janeiro – UFRRJ (2009). Trabalha com conservação de espécies com enfoque no
+        desenvolvimento de estratégias de conservação para espécies ameaçadas de extinção e genética
+        da conservação. No CNCFlora coordena o projeto “Planejamento de ações para a conservação de
+        espécies da Flora ameaçadas de extinção”. Eline adora o contato com a natureza, ir à praia,
+        praticar Yoga, andar de bicicleta, viajar e aproveitar a companhia dos afilhados!<br/>
+        <strong>Email:</strong> eline@cncflora.net</p>
   </div>
   <div class="item">
-      <img src="{{static_url}}/images/equipe/lista-vermelha/luiz.jpg"/>
-      <p><strong>Luiz Antonio Ferreira dos Santos Filho:</strong> Especialização em Meio Ambiente pela COPPE/UFRJ (2012), graduado em Ciências Biológicas (Bacharelado) pela Universidade Santa Úrsula - USU (2009). Possui experiência em Coleções Biológicas e Taxonomia Vegetal. No CNCFlora é coordenador substituto do projeto “Avaliação do risco de extinção da flora brasileira”, participando da análise de dados, avaliação de risco, redação de artigos científicos e de documentos técnicos ou de divulgação científica.</p>
+      <img src="{{static_url}}/images/equipe/Daniel.jpg"/>
+      <p><strong>Daniel Maurenza</strong>
+        biologo e mestre em Ecologia pelo Instituto Nacional de Pesquisas da
+        Amazônia. No CNCFlora faz parte da equipe planejamento de ações para a conservação de
+        espécies ameaçadas de extinção, tendo como atribuição a análise de dados da flora, produção
+        científica e coleta de dados de campo. Daniel adora fazer trilhas e tomar cerveja com os amigos!<br/>
+        <strong>Email:</strong> dmaurenza@cncflora.net
+      </p>
   </div>
   <div class="item">
-      <img src="{{static_url}}/images/equipe/lista-vermelha/luiz.jpg"/>
-      <p><strong>Luiz Antonio Ferreira dos Santos Filho:</strong> Especialização em Meio Ambiente pela COPPE/UFRJ (2012), graduado em Ciências Biológicas (Bacharelado) pela Universidade Santa Úrsula - USU (2009). Possui experiência em Coleções Biológicas e Taxonomia Vegetal. No CNCFlora é coordenador substituto do projeto “Avaliação do risco de extinção da flora brasileira”, participando da análise de dados, avaliação de risco, redação de artigos científicos e de documentos técnicos ou de divulgação científica.</p>
+      <img src="{{static_url}}/images/equipe/Fernanda.jpg"/>
+      <p><strong>Fernanda Wimmer</strong>
+        Geógrafa formada pela Pontifícia Universidade Católica do Rio de
+        Janeiro, com especialização em Gestão Ambiental pela COPPE/UFRJ (2011). Trabalha com
+        geoprocessamento e sensoriamento remoto. No CNCFlora atua como técnica em
+        geoprocessamento. Fernanda adora artes, viajar, nadar e beber com os amigos!<br/>
+        <strong>Email:</strong> fernanda@cncflora.net
+      </p>
   </div>
   <div class="item">
-      <img src="{{static_url}}/images/equipe/lista-vermelha/luiz.jpg"/>
-      <p><strong>Luiz Antonio Ferreira dos Santos Filho:</strong> Especialização em Meio Ambiente pela COPPE/UFRJ (2012), graduado em Ciências Biológicas (Bacharelado) pela Universidade Santa Úrsula - USU (2009). Possui experiência em Coleções Biológicas e Taxonomia Vegetal. No CNCFlora é coordenador substituto do projeto “Avaliação do risco de extinção da flora brasileira”, participando da análise de dados, avaliação de risco, redação de artigos científicos e de documentos técnicos ou de divulgação científica.</p>
+      <img src="{{static_url}}/images/equipe/Juliana.jpg"/>
+      <p><strong>Juliana Amaral</strong>
+        Bióloga e mestre em Botânica pela Escola Nacional de Botânica Tropical -
+        ENBT (2014). No CNCFlora, participa de todos os processos envolvidos na elaboração de
+        estratégias de conservação para a flora ameaçada de extinção, da redação de artigos científicos e
+        de documentos técnicos ou de divulgação científica. Ainda, é responsável pela coleta e
+        determinação do material botânico durante as expedições à campo. Juliana adora montanhas,
+        praticar Yoga, aprender coisas novas e tomar vinho com os amigos!<br/>
+        <strong>Email:</strong> juliana@cncflora.net<br/>
+        <a href="http://lattes.cnpq.br/7258510578751609" target="_blank"><strong>Currículo</strong></a>
+      </p>
+  </div>
+  <div class="item">
+      <img src="{{static_url}}/images/equipe/Marcio.jpg"/>
+      <p><strong>Marcio Verdi</strong>
+        Biólogo e mestre em Botânica pela Universidade Federal Rio Grande Sul
+        (2013), cujos interesses estão voltados para a avaliação da biodiversidade e modelagem de
+        distribuição de espécies sobre diferentes cenários climáticos, com enfoque para conservação. No
+        CNCFlora participa de todos os processos envolvidos na elaboração de estratégias de
+        conservação para a flora ameaçada de extinção, da redação de artigos científicos e de
+        documentos técnicos ou de divulgação científica. Ele ainda é responsável pela coleta e
+        determinação do material botânico durante as expedições à campo. Verdi adora coletar e
+        fotografar plantas, tomar chimarrão e apreciar cervejas artesanais.<br/>
+        <strong>Email:</strong> verdi@cncflora.net
+      </p>
+  </div>
+  <div class="item">
+      <img src="{{static_url}}/images/equipe/Nina.jpg"/>
+      <p><strong>Nina Pougy</strong>
+        Bióloga, com bacharel em Ecologia pela Universidade Federal do Rio de Janeiro -
+        UFRJ (2013). No CNCFlora, é coordenadora substituta do projeto “Planejamento de ações para a
+        conservação de espécies da Flora ameaçadas de extinção”. Também é responsável pelo
+        geoprocessamento e análises de dados espaciais e participa na elaboração de estratégias de
+        conservação para a flora ameaçada de extinção, nas expedições de campo e na redação de artigos
+        científicos, projetos e documentos técnicos. Nina adora viajar, ir à praia, praticar Yoga, tomar
+        banho de cachoeira e sair com os amigos!<br/>
+        <strong>Email:</strong> nina@cncflora.net
+      </p>
+  </div>
+  <div class="item">
+      <img src="{{static_url}}/images/equipe/Daniele.jpg"/>
+      <p><strong>Daniele Vila Nova</strong>
+        Bióloga e doutora em Ecologia e Conservação pela Universidade Federal
+        do Paraná (2014). Daniele trabalha principalmente com a priorização espacial e análise de
+        governabilidade como uma estrutura de planejamento do espaço costeiro e marinho. Atualmente,
+        faz pós-doutorado, sob a supervisão de Rafael Loyola, e auxilia o CNCFlora a desenvolver o
+        primeiro mapa de áreas prioritárias para a conservação da flora ameaçada no Brasil. Daniele
+        adora viajar, fotografia e edição de vídeos, além de praticar mergulho e stand-up paddle.<br/>
+        <strong>Email:</strong> da_vilanova@ufg.br<br/>
+        <a href="http://lattes.cnpq.br/7089890791632018" target="_blank"><strong>Currículo</strong></a>
+      </p>
+  </div>
+  <div class="item">
+      <img src="{{static_url}}/images/equipe/Nathália.jpg"/>
+      <p><strong>Nathália Machado </strong>
+        Bióloga e doutora em Ecologia e Evolução pela Universidade Federal de
+        Goiás (2014). Nathália trabalha principalmente com priorização espacial para conservação,
+        ecologia de aves e risco de extinção. Atualmente, faz pós-doutorado, sob a supervisão de Rafael
+        Loyola, e auxilia o CNCFlora a desenvolver o primeiro mapa de áreas prioritárias para a
+        conservação da flora ameaçada no Brasil. Nathália adora viajar, dançar e praticar pilates.<br/>
+        <strong>Email:</strong> nathaliamachado@cncflora.net<br/>
+        <a href="http://lattes.cnpq.br/2608509187003731" target="_blank"><strong>Currículo</strong></a>
+      </p>
   </div>
  </div>
 </div>
