--- a/templates/layout-content.html
+++ b/templates/layout-content.html
@@ -24,7 +24,7 @@
               slideMargin: 15,
               speed: 1000,
               auto: true,
-              controls: false
+              controls: false,
 
             });
             $('.slide-equipe').bxSlider({
@@ -34,7 +34,9 @@
               slideMargin: 15,
               speed: 1000,
               auto: true,
-              controls: true
+              controls: true,
+              infiniteLoop: false,
+              hideControlOnEnd: true
 
             });
             $('#menu a').each(function() {
