Adiciona conteudo no projeto lista vermelha.

--- a/templates/content/pt-br/project/lista-vermelha.html
+++ b/templates/content/pt-br/project/lista-vermelha.html
@@ -1,50 +1,81 @@
   <h3>Lista Vermelha</h3>
   <div class="box-section col-sm-12 col-md-12 col-lg-12">
       <div class="banner-full"><img src="{{static_url}}/images/vermelha.jpg" /></div>
-      <p>Dentre como atribuições fazer CNCFlora, ESTA uma de avaliar o Risco de extinção das Espécies da flora brasileira. Pará ISSO FOI Desenvolvido hum Sistema de Informação that permite uma Participação e Integração de Uma Rede de Especialistas e that armazena, organiza e Gerencia de INFORMAÇÕES Científicas necessárias Pará como avaliações de Risco de extinção de Espécies da flora.</font></font></p>
-      <p>A Metodologia adotada permite uma padronização dos esforços Nacionais, assegurando rigor analyses Científico como. A Lista Vermelha Produzida Pelo CNCFlora E Dinâmica e do conforme avaliações como São realizadas OU alteradas, São inseridas no portal, havendo Uma Constante atualização. Disso de Além, que sejam considerados criterios Biológicos e utiliza o Sistema de criterios e CATEGORIAS da IUCN Pará avaliar o Risco de extinção das Espécies.</p>
-      <p><div class="banner-medium"><img src="{{static_url}}/images/img3.jpg" /></div>Segundo a Legislação um breve los Ser Publicada, a Lista de Espécies Ameaçadas avaliadas Como de extinção NAS CATEGORIAS Vulnerável (VU), Em Perigo (EN) e Criticamente em Perigo (CR), DEVE Ser submetida anualmente Pará uma Comissão Nacional de Biodiversidade - CONABIO , com a Participação da Câmara Técnica Permanente de Espécies Ameaçadas de Extinção e de Espécies Ameaçadas de Sobreexplotadas OU Sobreexplotação. De carater Consultivo, a CONABIO delibera Sobre a Lista enviada eA encaminha AO Ministério do Meio Ambiente, that POR SUA Vez atualiza a Lista Oficial de Espécies Ameaçadas de Extinção da Flora Brasileira atraves da Publicação de Uma Instrução Normativa.</p>
-  </div>
+      <p>Dentre as atribuições do CNCFlora está a de avaliar o risco de extinção de espécies da flora do
+      Brasil. Esta importante tarefa é executada pelo “Projeto Lista Vermelha”, Red List Authority da
+      IUCN, cuja meta é avaliar o risco de extinção de todas as espécies da flora brasileira até o ano
+      de 2020, atendendo a meta 2 da “Estratégia Global de Conservação de Plantas” (sigla em
+      inglês GSPC) e a portaria 43.2014 do Ministério do Meio Ambiente (MMA) que institui o
+      programa Pró-espécies.<p>
+
+      <p>A equipe do CNCFlora é formada por 6 profissionais formados em diferentes áreas ligadas às
+      ciências da natureza, que atuam em colaboração com uma rede de especialistas voluntários,
+      realizando recortes anuais de avaliações de risco de extinção.<p>
+
+      <p>O fluxo de trabalho adotado pelo Projeto consiste em três etapas básicas. A etapa de “Análise
+      de dados” que consiste na definição do recorte de avaliações e inserção de todos os dados
+      referentes à biologia das espécies, em perfis on-line criados para cada uma delas. Em seguida,
+      durante a etapa de “Validação” os dados passam pelo importante crivo da rede de
+      especialistas botânicos, neste momento, os especialistas podem inserir, excluir ou comentar
+      acerca das informações levantadas ao longo da etapa de “Análise”, através do SiSFlora, que
+      permite o acesso às informações pelos especialistas envolvidos com no recorte. Estas
+      informações são revisadas pelos analistas, que incorporam todas as alterações indicadas pelos
+      especialistas de cada família preparando os perfis das espécies para a etapa final de “Avaliação
+      de risco de extinção”.</p>
+
+      <p>As avaliações de risco de extinção conduzidas pelo projeto são realizadas seguindo o sistema
+      de categorias e critérios (v. 3.1) estabelecidos pela “União Internacional para a Conservação da
+      Natureza” (sigla em inglês IUCN), amplamente utilizados e reconhecidos internacionalmente.
+      Durante essa etapa, as espécies são enquadradas em uma das 8 categorias de risco de
+      extinção (figura 1).</p>
+      <div class="banner-full"><img src="{{static_url}}/images/projetos/lista-vermelha/IUCN.jpg" /></div>
+      <p>Quando as avaliações são concluídas elas são disponibilizadas à rede de especialistas, que
+        inserem suas considerações acerca das mesmas, sendo estas novamente revisadas pelo
+        Projeto. Concluída essa etapa, as avaliações são publicadas. Todas as informações e
+        referências utilizadas pelo Projeto estão disponíveis para o acesso público ao longo de todo o
+        processo.</p>
+</div>
 <div class="box-section col-sm-12 col-md-12 col-lg-12">
   <br/>
   <h3>Produtos</h3>
   <div class="doc">
     <div class="img">
       <a href="{{static_url}}/pdf/publicacao/manual_operacional.pdf">
-        <img src="{{static_url}}/images/documentos/publicacoes/publicacoes1.png"/>
+        <img src="{{static_url}}/images/projetos/lista-vermelha/Livro Vermelho - Raras do Cerrado.jpg"/>
     <div class="portfolio-overlay">
         <br/>
-        <p>Manual Operacional Avaliação de Risco de Extinção das Espécies da Flora Brasileira.</p>
+        <p>Livro Vermelho da flora do Brasil, 2014</p>
 
     </div>
     </a>
     </div>
     <div class="img">
       <a href="{{static_url}}/pdf/publicacao/manual_operacional.pdf">
-        <img src="{{static_url}}/images/documentos/publicacoes/publicacoes1.png"/>
+        <img src="{{static_url}}/images/projetos/lista-vermelha/Projeto Capa.jpg"/>
+
     <div class="portfolio-overlay">
         <br/>
-        <p>Manual Operacional Avaliação de Risco de Extinção das Espécies da Flora Brasileira.</p>
+        <p>Manual Operacional Avaliação de Risco de Extinção das Espécies Raras do Cerrado</p>
 
     </div>
     </a>
     </div>
     <div class="img">
       <a href="{{static_url}}/pdf/publicacao/manual_operacional.pdf">
-        <img src="{{static_url}}/images/documentos/publicacoes/publicacoes1.png"/>
+        <img src="{{static_url}}/images/projetos/lista-vermelha/Guia de Comentários.jpg"/>
     <div class="portfolio-overlay">
         <br/>
-        <p>Manual Operacional Avaliação de Risco de Extinção das Espécies da Flora Brasileira.</p>
+        <p>Avaliação de risco de extinção</p>
 
     </div>
     </a>
     </div>
     <div class="img">
       <a href="{{static_url}}/pdf/publicacao/manual_operacional.pdf">
-        <img src="{{static_url}}/images/documentos/publicacoes/publicacoes1.png"/>
+        <img src="{{static_url}}/images/livrovermelho.png"/>
     <div class="portfolio-overlay">
         <br/>
-        <p>Manual Operacional Avaliação de Risco de Extinção das Espécies da Flora Brasileira.</p>
+        <p>Livro Vermelho da flora do Brasil, 2013</p>
 
     </div>
     </a>
